# weft

./: .codecov.yml  .env  .envrc  .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_STATUS.md  README.md  coder-session.txt  pyproject.toml  status.txt
.claude/skills/: autoplan  benchmark  benchmark-models  canary  careful  codex  context-restore  context-save  cso  design-consultation  design-html  design-review  design-shotgun  devex-review  document-release  freeze  gstack-upgrade  guard  health  investigate  land-and-deploy  landing-report  learn  make-pdf  office-hours  open-gstack-browser  pair-agent  plan-design-review  plan-devex-review  plan-tune  qa-only  scrape  setup-deploy  setup-gbrain  skillify  sync-gbrain  unfreeze
.github/: dependabot.yml
.github/workflows/: dependabot.yml  release-gate-django.yml  release-gate-docker.yml  release-gate-macos-sandbox.yml  release-gate-microsandbox.yml  release-gate.yml  release.yml  test.yml
.weft/: agent-health.json  agents.json  broker.db  config.json  weft_export.jsonl
docs/: TODO-simplebroker-backend-followups.md  coalescing.md  lessons.md
docs/agent-context/: README.md  context.index.yaml  decision-hierarchy.md  engineering-principles.md  lessons.md  principles.md
docs/plans/: 2026-04-06-agent-runtime-boundary-cleanup-plan.md  2026-04-06-agent-runtime-implementation-plan.md  2026-04-06-persistent-agent-runtime-implementation-plan.md  2026-04-06-piped-input-support-plan.md  2026-04-06-postgres-backend-audit-and-shared-test-surface-plan.md  2026-04-06-postgres-extra-and-runtime-hint-plan.md  2026-04-06-release-gated-tag-workflow-plan.md  2026-04-06-release-helper-plan.md  2026-04-06-release-helper-retag-plan.md  2026-04-06-release-helper-unpublished-version-reuse-plan.md  2026-04-06-runner-extension-point-plan.md  2026-04-06-simplebroker-backend-generalization-plan.md  2026-04-06-taskspec-clean-design-plan.md  2026-04-06-weft-backend-neutrality-plan.md  2026-04-07-active-control-main-thread-plan.md  2026-04-07-agent-context-hardening-uplift.md  2026-04-07-spec-plan-code-traceability-plan.md  2026-04-08-release-gate-failure-audit-log.md  2026-04-08-release-gate-failure-audit-plan.md  2026-04-08-release-gate-failure-findings.md  2026-04-08-task-lifecycle-stop-drain-audit-log.md  2026-04-08-task-lifecycle-stop-drain-audit-plan.md  2026-04-08-task-lifecycle-stop-drain-findings.md  2026-04-09-manager-bootstrap-unification-plan.md  2026-04-09-manager-lifecycle-command-consolidation-plan.md  2026-04-09-weft-serve-supervised-manager-plan.md  2026-04-13-cli-surface-doc-and-help-alignment-plan.md  2026-04-13-delegated-agent-authority-boundary-cleanup-plan.md  2026-04-13-delegated-agent-runtime-phase-1-implementation-plan.md  2026-04-13-delegated-agent-runtime-phase-2-implementation-plan.md  2026-04-13-delegated-agent-runtime-phase-3-implementation-plan.md  2026-04-13-detached-manager-bootstrap-hardening-plan.md  2026-04-13-good-to-excellent.md  2026-04-13-manager-bootstrap-readiness-and-cleanup-test-plan.md  2026-04-13-pipeline-first-class-runtime-implementation-plan.md  2026-04-13-pipeline-spec-expansion-plan.md  2026-04-13-result-stream-implementation-plan.md  2026-04-13-runner-monitor-result-waiter-and-liveness-fixes-plan.md  2026-04-13-spec-corpus-current-vs-planned-split-plan.md  2026-04-14-agent-runtime-package-refactor-plan.md  (+160 more)
docs/specifications/: 00-Overview_and_Architecture.md  00-Quick_Reference.md  00A-Overview_and_Architecture_Planned.md  01-Core_Components.md  01A-Core_Components_Planned.md  02-TaskSpec.md  03-Manager_Architecture.md  03-Worker_Architecture.md  03A-Manager_Architecture_Planned.md  04-SimpleBroker_Integration.md  04A-SimpleBroker_Integration_Planned.md  05-Message_Flow_and_State.md  05A-Message_Flow_and_State_Planned.md  06-Resource_Management.md  06A-Resource_Management_Planned.md  07-System_Invariants.md  07A-System_Invariants_Planned.md  08-Testing_Strategy.md  08A-Testing_Strategy_Planned.md  09-Implementation_Plan.md  (+15 more)
extensions/weft_docker/: README.md  pyproject.toml
extensions/weft_docker/tests/: test_agent_images.py  test_agent_runner.py  test_container_profiles.py  test_container_runtime_resolution.py  test_docker_plugin.py
extensions/weft_docker/weft_docker/: __init__.py  _sdk.py  agent_images.py  agent_runner.py  images.py  plugin.py  profiles.py
extensions/weft_macos_sandbox/: README.md  pyproject.toml
extensions/weft_macos_sandbox/tests/: test_macos_sandbox_plugin.py
extensions/weft_macos_sandbox/weft_macos_sandbox/: __init__.py  plugin.py
extensions/weft_microsandbox/: README.md  pyproject.toml
extensions/weft_microsandbox/tests/: conftest.py  test_command_runner.py  test_controls.py  test_integration_real_microsandbox.py  test_microsandbox_agent_runner.py  test_options.py  test_plugin_validation.py  test_runtime_adapter.py
extensions/weft_microsandbox/weft_microsandbox/: __init__.py  _options.py  _runtime.py  plugin.py
integrations/weft_django/: README.md  pyproject.toml
integrations/weft_django/tests/: test_weft_django.py
integrations/weft_django/tests/fixture_project/fixture_project/: authz.py  request_id_provider.py  settings.py  urls.py
integrations/weft_django/tests/fixture_project/testapp/: apps.py  models.py  weft_tasks.py
integrations/weft_django/weft_django/: __init__.py  apps.py  channels.py  client.py  conf.py  decorators.py  realtime.py  registry.py  sse.py  urls.py  views.py  worker.py
integrations/weft_django/weft_django/management/commands/: weft_status.py  weft_task_kill.py  weft_task_status.py  weft_task_stop.py
skills/: README.md
tests/: conftest.py  long_session_surface_benchmark.py  multiqueue_polling_benchmark.py  test_cli.py  test_commands.py  test_constants.py  test_harness_registration.py  test_helpers.py  test_tasks.py  test_taskspec.py  test_taskspec_convenience.py
tmp/: mm-mcp-experience-log.md
weft/: __init__.py  __main__.py  _constants.py  _exceptions.py  _runner_plugins.py  bootstrap.py  cli.py  cli_utils.py  context.py  ext.py  helpers.py  manager_detached_launcher.py  manager_process.py  runtime_liveness.py
(+368 files in other folders)
