[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weft"
version = "0.1.0"
description = "A lightweight workflow execution framework"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Van Lindberg", email = "van.lindberg@gmail.com"},
]
keywords = ["workflow", "orchestration", "automation", "task-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
dependencies = [
    "aider-chat>=0.85.2",
    "llm>=0.26",
    "rich>=14.0.0",
    "simplebroker>=2.1.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "pytest-timeout>=2.4.0",
]

[project.scripts]
weft = "weft.cli:app"

[project.urls]
Homepage = "https://github.com/VanL/weft"
Documentation = "https://github.com/VanL/weft#readme"
Repository = "https://github.com/VanL/weft.git"
Issues = "https://github.com/VanL/weft/issues"

[tool.hatch.build]
include = [
    "weft/**/*.py",
    "README.md",
    "LICENSE",
]
exclude = [
    "tests/",
    "agent_history/",
    ".*",
    "*.db",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers -m 'not slow' -n auto --dist loadgroup"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.13"
no_namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["weft", "simplebroker"]

