[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weft"
version = "0.9.5"
description = "The durable task substrate for agent systems"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Van Lindberg", email = "van@modelmonster.ai"},
]
keywords = ["workflow", "orchestration", "automation", "task-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Utilities",
]
dependencies = [
    "llm>=0.26",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.0.0",
    "pydantic>=2.0.0",
    "rich>=14.0.0",
    "setproctitle>=1.3.7",
    "simplebroker>=3.1.8",
    "typer>=0.16.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
pg = [
    "simplebroker-pg>=1.0.5",
]
docker = [
    "weft-docker>=0.6.1,<1",
]
django = [
    "weft-django>=0.9.5,<1",
]
django-channels = [
    "weft-django[channels]>=0.9.5,<1",
]
macos-sandbox = [
    "weft-macos-sandbox>=0.5.1,<1",
]
all = [
    "simplebroker-pg>=1.0.5",
    "weft-docker>=0.6.1,<1",
    "weft-django>=0.9.5,<1",
    "weft-macos-sandbox>=0.5.1,<1",
]
dev = [
    "simplebroker-pg>=1.0.5",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "mypy>=1.0",
    "ruff>=0.12",
    "pytest-timeout>=2.4.0",
    "types-psutil>=5.9.5",
]

[project.scripts]
weft = "weft.cli:app"

[project.urls]
Homepage = "https://github.com/VanL/weft"
Documentation = "https://github.com/VanL/weft#readme"
Repository = "https://github.com/VanL/weft.git"
Issues = "https://github.com/VanL/weft/issues"

[tool.uv.sources]
weft-docker = { path = "./extensions/weft_docker", editable = true }
weft-django = { path = "./integrations/weft_django", editable = true }
weft-macos-sandbox = { path = "./extensions/weft_macos_sandbox", editable = true }

[tool.hatch.build]
include = [
    "weft/**/*.py",
    "weft/**/*.json",
    "weft/py.typed",
    "README.md",
    "LICENSE",
]
exclude = [
    "tests/",
    "agent_history/",
    ".*",
    "*.db",
    "simplebroker/",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers -m 'not slow' -n auto --dist loadgroup"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "shared: backend-agnostic tests that should pass across supported backends",
    "sqlite_only: tests that intentionally validate SQLite/file-backed behavior",
    "xdist_group(name): groups broker-heavy tests onto one xdist worker when pytest-xdist is enabled",
]

[tool.mypy]
python_version = "3.13"
no_namespace_packages = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
exclude = "(^tests/)"

[[tool.mypy.overrides]]
module = "setproctitle"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "weft_docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "channels.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["weft", "weft_django", "simplebroker"]
