[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weft-macos-sandbox"
version = "0.5.0"
description = "macOS sandbox runner plugin for Weft"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Van Lindberg", email = "van@modelmonster.ai"},
]
dependencies = [
    "weft>=0.6.4,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.entry-points."weft.runners"]
macos-sandbox = "weft_macos_sandbox.plugin:get_runner_plugin"

[tool.hatch.build]
include = [
    "weft_macos_sandbox/**/*.py",
    "README.md",
]
